--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <header>
   <div class="logo">
-    BOOMINUM <span style="color:#ffd500;">⚡</span>
+    BOOMINUM <span>⚡</span>
   </div>
 
   <nav class="nav-menu" id="navMenu">
@@ -39,8 +39,8 @@
       <div class="input-group">
         <label for="model-select">Modelo de IA</label>
         <select id="model-select">
-          <option value="llama-3.2-70b-text">LLaMA 3.2 – 70B (Mais inteligente)</option>
-          <option value="llama-3.2-11b-text">LLaMA 3.2 – 11B (Rápido)</option>
+          <option value="llama-3.2-70b-text">LLaMA 3.2 — 70B (Mais inteligente)</option>
+          <option value="llama-3.2-11b-text">LLaMA 3.2 — 11B (Rápido)</option>
           <option value="mixtral-8x7b-32768">Mixtral 8x7B (Criativo)</option>
         </select>
       </div>
@@ -103,8 +103,8 @@
     <div class="section-block">
       <label>Modelo padrão</label>
       <select id="setting-default-model">
-        <option value="llama-3.2-70b-text">LLaMA 3.2 – 70B</option>
-        <option value="llama-3.2-11b-text">LLaMA 3.2 – 11B</option>
+        <option value="llama-3.2-70b-text">LLaMA 3.2 — 70B</option>
+        <option value="llama-3.2-11b-text">LLaMA 3.2 — 11B</option>
         <option value="mixtral-8x7b-32768">Mixtral 8x7B</option>
       </select>
     </div>
@@ -206,8 +206,8 @@
   </div>
 </div>
 
-<!-- PREMIUM, UPGRADE, CONGRATS → (mantidos iguais) -->
-
+<!-- SCRIPT (FINAL) -->
 <script type="module" src="script.js"></script>
+
 </body>
 </html>
