fix: ajuste no server

--- a/index.html
+++ b/index.html
@@ -39,10 +39,16 @@
       <div class="input-group">
         <label for="model-select">Modelo de IA</label>
         <select id="model-select">
-          <option value="llama-3.2-70b-text">LLaMA 3.2 — 70B (Mais inteligente)</option>
-          <option value="llama-3.2-11b-text">LLaMA 3.2 — 11B (Rápido)</option>
-          <option value="mixtral-8x7b-32768">Mixtral 8x7B (Criativo)</option>
-        </select>
+  <option value="openai/gpt-oss-120b">
+    GPT-OSS 120B — Profissional
+  </option>
+  <option value="openai/gpt-oss-120b">
+    GPT-OSS 120B — Criativo
+  </option>
+  <option value="openai/gpt-oss-120b">
+    GPT-OSS 120B — Rápido
+  </option>
+</select>
       </div>
 
       <div class="input-group">
